# pyunity

./: .gitignore  .gitmodules  .gitpod.yml  .isort.cfg  .mypy.ini  .readthedocs.yaml  .readthedocs.yml  .replit  .travis.yml  .travis_requirements.txt  2d.py  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  PyOpenGL-3.1.5-cp38-cp38-win32.whl  PyOpenGL_accelerate-3.1.5-cp38-cp38-win32.whl  README.md  Rotator.py  Scene.mesh  Scene.scene  annotations.py  appveyor.yml  audio.py  axes.py  ball.py  basic.py  build.bat  build.sh  build37.bat  buildall.bat  car.py  changelog.md  changes.txt  cli.py  codecov.yml  cylinder.mesh  cylinder.py  events.py  install.sh  (+27 more)
.github/: build_requirements.txt  dependabot.yml  stubtest-ignore.txt
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md
.github/workflows/: analyze.yml  build_wheel.sh  coverage.yml  linux.yml  macos.yml  trigger.yml  unix.yml  windows.yml
Roll A Ball/: Main Scene.pyunity  __init__.py  __main__.py
Roll A Ball/Materials/: Floor.mat  Wall.mat
Roll A Ball/Meshes/: Ball.mesh  Floor.mesh
Roll A Ball/Scenes/: Main Scene.scene
Roll A Ball/Scripts/: CameraController.py  PlayerController.py
Scene/: Scene.pyunity  Scene.scene
Scene/Materials/: Cube.mat
Scene/Meshes/: Cube.mesh
Scene/Scenes/: Scene.scene
Scene/Scripts/: Rotator.py
Shadow Mapping Demo/: blockworld.aa7  display.frag  display.vert  main.py  pg.py  shader.py  shadowMap.frag  shadowMap.vert  test1.py  window.py
c-unity/: build.py  main.c  properties.h  unity.c  unity.h
docs/: build.bat  build.py  conf.py  contributing.md  index.html  index.rst  objects.inv  pyunity.config.rst  pyunity.meshes.rst  requirements.txt  search.html  undoc.txt
docs/.doctrees/: environment.pickle  index.doctree
docs/_html/: objects.inv  pyunity.html  pyunity.window.html  searchindex.js
docs/_static/: documentation_options.js
docs/en/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyunity.audio.html  pyunity.core.html  pyunity.errors.html  pyunity.html  pyunity.input.html  pyunity.loader.html  pyunity.logger.html  pyunity.meshes.html  pyunity.physics.config.html  pyunity.physics.core.html  pyunity.physics.html  pyunity.quaternion.html  pyunity.scene.html  pyunity.scenes.html  pyunity.scenes.scene.html  pyunity.scenes.sceneManager.html  pyunity.vector3.html  pyunity.window.glfwWindow.html  pyunity.window.glutWindow.html  pyunity.window.html  pyunity.window.pygameWindow.html  releases.html  search.html  searchindex.js  tutorial1.html  tutorial2.html  tutorial3.html  tutorials.html
docs/source/: api.rst  conf.py  index.rst  latexindex.rst  license.rst  links.rst  modules.rst  pyunity.core.rst  pyunity.errors.rst  pyunity.examples.example1.rst  pyunity.examples.example1.scripts.rst  pyunity.examples.example2.rst  pyunity.examples.rst  pyunity.logger.rst  pyunity.physics.config.rst  pyunity.physics.core.rst  pyunity.physics.rst  pyunity.quaternion.rst  pyunity.render.rst  pyunity.rst  pyunity.scenes.rst  pyunity.script.rst  pyunity.vector3.rst  pyunity.window.pygameWindow.rst  pyunity.window.rst  releases.rst  tutorial1.rst  tutorial2.rst  tutorial3.rst  tutorials.rst
editor/: __main__.py  cli.py  commands.py  context.py  locale.py  menu.py
editor/commands/: base.py  project.py  scene.py
editor/locale/: en_GB.json
ext/: audio.pxd  config.pxd  core.pxd  errors.pxd  input.pxd  loader.pxd  meshes.pxd  quaternion.pxd  scene.pxd  vector3.pxd
ext/scenes/: scene.pxd  sceneManager.pxd
gltests/: basic.py  capsule.mesh  cylinder.mesh  glm_cam.py  lighting.py  shaders.py  shape.py  sphere.mesh  tex.py  tex_lighting.py  tex_shader.py  tex_wireframe_lighting.py
hpp-fcl/: .gitignore  setup.py
pyunity/: __init__.py  __init__.pyi  __main__.py  _version.py  audio.py  config.cp38-win32.pyd  config.py  core examples.txt  core.cp38-win32.pyd  core.py  docstrings.py  errors.cp38-win32.pyd  errors.py  events.py  files.py  gui.py  info.py  input.py  loader.cp38-win32.pyd  loader.py  logger.py  meshes.cp38-win32.pyd  meshes.py  missing.txt  notes.txt  quaternion.cp38-win32.pyd  quaternion.py  render.py  resources.py  scene.cp38-win32.pyd  scene.py  script.py  settings.py  values.py  vector3.cp38-win32.pyd  vector3.py  vectors.txt
pyunity.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt  top_level.txt
pyunity/engine/: __init__.py  config.py  core.py  meshes.py  scene.py
pyunity/examples/: __init__.py  example1.py  scripts.py
pyunity/physics/: __init__.py  config.cp38-win32.pyd  config.py  core.cp38-win32.pyd  core.py  vector3.py
pyunity/primitives/: capsule.mesh  cube.mesh  cylinder.mesh  doubleQuad.mesh  double_quad.mesh  quad.mesh  sphere.mesh
pyunity/scenes/: __init__.py  runner.py  scene.py  sceneManager.py
pyunity/tests/: test1.py
pyunity/values/: __init__.py  abc.py  mathf.py  other.py  quaternion.py  texture.py  vector.py  vector2.py  vector3.py
source/: conf.py
sphinx/: conf.py
src/: __init__.c  __init__.py  __main__.c  __main__.py  audio.c  config.c  core.c  errors.c  files.c  input.c  loader.c  logger.c  meshes.c  notes.txt  quaternion.c  render.c  scene.c  script.c  vector3.c
stubs/: README.md  annotations.py  config.pyi  generate.py  import.py  logger.pyi  meshes.pyi  missing.txt  pyproject.toml  quaternion.pyi  setup.py  vector3.pyi
stubs/PyUnityScripts/: __init__.pyi
stubs/pyunity/: __init__.pyi  _version.pyi  audio.pyi  config.pyi  core.pyi  errors.pyi  events.pyi  files.pyi  gui.pyi  info.pyi  input.pyi  loader.pyi  logger.pyi  meshes.pyi  missing.txt  quaternion.pyi  render.pyi  resources.pyi  settings.pyi  vector3.pyi
stubs/pyunity/examples/: __init__.pyi
stubs/pyunity/physics/: __init__.pyi  config.pyi  core.pyi
stubs/pyunity/scenes/: __init__.pyi  runner.pyi  scene.pyi  sceneManager.pyi
stubs/pyunity/values/: __init__.pyi  abc.pyi  mathf.pyi  other.pyi  quaternion.pyi  texture.pyi  vector.pyi
stubs/pyunity/window/: __init__.pyi  abc.pyi
stubs/pyunity/window/providers/: __init__.pyi
tests/: __init__.py  scripts.py  util.py
(+317 files in other folders)
