[metadata]
name = pyunity
author = The PyUnity Team
author_email = tankimarshal2@gmail.com
description = A Python implementation of the Unity Engine
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
url = https://docs.pyunity.x10.bz/
project_urls =
    Documentation = https://docs.pyunity.x10.bz/
    Source = https://github.com/pyunity/pyunity
    Tracker = https://github.com/pyunity/pyunity/issues
    Changelog = https://docs.pyunity.x10.bz/en/latest/releases.html
classifiers =
    Development Status :: 3 - Alpha
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.6
install_requires =
    pyopengl
    pillow
    pysdl2
    pysdl2-dll
    pyglm

[options.extras_require]
providers = # Other window providers as needed
    glfw
